# scitex-context

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  dep-hygiene-smoke.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-context-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: conf.py  index.rst
examples/: quickstart.py
src/scitex_context/: __init__.py  _embed.py  _less.py  _paste.py
src/scitex_context/_skills/scitex-context/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_context/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_context/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_context/_sphinx_html/.doctrees/api/: scitex_context.doctree
src/scitex_context/_sphinx_html/_modules/: index.html
src/scitex_context/_sphinx_html/_modules/scitex_context/: _detect_environment.html  _get_notebook_path.html  _suppress_output.html
src/scitex_context/_sphinx_html/_sources/: api.rst.txt  index.rst.txt
src/scitex_context/_sphinx_html/_sources/api/: scitex_context.rst.txt
src/scitex_context/_sphinx_html/api/: scitex_context.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py
tests/scitex_context/: test__embed.py  test__less.py  test__paste.py  test__suppress_output.py
