[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-context"
version = "0.2.0"
description = "Execution-context detection (script vs Jupyter vs IPython) + stdout/stderr suppression — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "context", "jupyter", "notebook", "ipython", "stdout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
ipython = [
    # ``embed`` / ``less`` need IPython; ``embed`` / ``paste`` also need
    # pyperclip. These are optional — the package as a whole works
    # without them.
    "IPython>=8.0",
    "pyperclip>=1.8",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",  # tests run with --timeout=120 in CI test.yml
    "ruff",
    "scitex-dev[cli-audit]>=0.11.7",  # tests/develop/test_audit.py
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-context[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-context"
Repository = "https://github.com/ywatanabe1989/scitex-context"
Documentation = "https://scitex-context.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_context = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-context = "scitex_context"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_context"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "apps", "config", "docs", "examples"]
